# blog

./: .gitignore  README.MD  SETUP_GITHUB_SECRETS.md  TAURI_AUTO_UPDATE_GUIDE.md  TAURI_RELEASE_SETUP.md  index.html  package-lock.json
.github/: copilot-instructions.md
.github/workflows/: deploy.yml  main.yml  rust.yml  tauri-release.yml  webpack.yml
assets/: Admin-B99cnjc6.js  Admin-BNUtXLbM.js  Admin-BbQKb_8h.js  Admin-CGrExj2O.js  Admin-CgP9SJqw.js  Admin-CsdNLTvK.js  Admin-D-Zejiic.js  Admin-DUCyaVJj.js  Admin-DYeWUd_w.js  AdminCreate-701-uEFK.js  AdminCreate-Bfo2t9R9.js  AdminCreate-C1HszrJ-.js  AdminCreate-Cnx9jfuQ.js  AdminCreate-CyDrEkGE.js  AdminCreate-D7OFpfQZ.js  AdminCreate-DF6Qm3IG.js  AdminCreate-Dl_9k6pP.js  AdminCreate-SoH2l9xZ.js  AdminEdit-AoHyyLJc.js  AdminEdit-BQJfIVL3.js  AdminEdit-BtASQfTA.js  AdminEdit-BtxozZce.js  AdminEdit-CFpJPZRu.js  AdminEdit-CcZEJGrx.js  AdminEdit-Cl2lEmrT.js  AdminEdit-DTF8DSlc.js  AdminEdit-DrgvfieQ.js  ArticleDetail-Bl0HvlxK.css  ArticleDetail-CDR2Kv6s.js  ArticleDetail-CVQzD7H4.js  ArticleDetail-CpT0Q39s.css  ArticleDetail-DSJAl3VX.js  ArticleDetail-D_LLGftT.js  ArticleDetail-Dpwghhx_.js  ArticleDetail-Du14b0oI.js  ArticleDetail-OAOLrwOy.js  ArticleDetail-PnBx9H9h.js  ArticleDetail-j1pqqDfO.css  ArticleDetail-wH_gqRCj.js  ArticleForm.vue_vue_type_script_setup_true_lang-7VOON0c-.js  (+58 more)
backend/: .env  Cargo.toml  app.db
backend/migrations/: 0001_create_articles.sql  0002_create_users.sql  0003_create_comments.sql  0004_update_comments.sql  0005_update_comments.sql
backend/seeds/: 0001_superuser.sql
backend/src/: config.rs  error.rs  main.rs
backend/src/auth/: mod.rs
backend/src/db/: mod.rs
backend/src/models/: article.rs  comment.rs  mod.rs  search.rs  user.rs
backend/src/routes/: articles.rs  auth.rs  comments.rs  health.rs  mod.rs  searches.rs  users.rs
frontend/: .gitignore  COMPONENT_MIGRATION.md  README.md  components.d.ts  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/.github/: copilot-instructions.md
frontend/src-tauri/: .env  .gitignore  AUTH_GUIDE.md  Cargo.toml  app.db  tauri.conf.json
frontend/src-tauri/.sqlx/: query-78951c9ce581044d1c96a9ee20e6a9cc00d7ab0c4b284dc8068fd0b8e6e8de23.json  query-9492e615fc9d450a150cb4f19577a348378e2bb4e6880f3c5bd301dbe71a2154.json  query-c83eb79ca4981a6185ca473659c102ba5fe99d2d9db7bd3873826cd4932d2e9b.json  query-cc5b0c403ed7e20bdb009fb015596c4db3b3408d6635b3a822eb330cf8fa7790.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/migrations/: 0003_create_comments.sql
frontend/src-tauri/seeds/: 0001_superuser.sql
frontend/src-tauri/src/: config.rs  db.rs  lib.rs  tray.rs
frontend/src-tauri/src/auth/: mod.rs
frontend/src-tauri/src/commands/: articles.rs  auth.rs  comments.rs  http.rs  mod.rs  searches.rs  users.rs
frontend/src-tauri/src/db/: mod.rs
frontend/src-tauri/src/models/: article.rs  comment.rs  mod.rs  search.rs  user.rs
frontend/src-tauri/src/repositories/: article.rs  comment.rs  mod.rs  search.rs  user.rs
frontend/src-tauri/~/.tauri/: myapp.key  myapp.key.pub
(+66 files in other folders)
