[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web 框架
axum = { version = "0.8", features = ["macros"] }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# 数据库 / 迁移
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "migrate",
    "uuid",
    # "macros",
] }

# 实用
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }

# 鉴权 / 密码哈希
rand = "0.8"
# rand_core = "0.6.4"
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["std"] }
password-hash = "0.5"

# 中间件 / 日志
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
